adding link to repository

--- a/index.html
+++ b/index.html
@@ -206,6 +206,12 @@ made by vlad saling (<a href="https://plus.google.com/109896067320435138862/post
                             
                           </p>
 
+                          <p>
+
+                            if you are interested for whatever reason, you can find source code of this project in my <a href="https://github.com/vlad-saling/star-trek-ipsum">github repository</a>.
+
+                          </p>
+
 
 
                           <h2><span>similar projects</span></h2>
