minor seo related tweaks - not really important

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Star Trek Ipsum</title>
-        <meta name="description" content="star trek tech talk inspired placeholder text">
+        <meta name="description" content="star trek lorem ipsum - star trek technobable inspired placeholder text">
         <meta name="author" content="vlad saling, http://twitter.com/#!/vlad_saling">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="css/grid.css">
