removing default begin with these voyages

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             </div>
                             <div class="c-1-1">
                                 <label for="bw">begin with "these are the voyages..."</label>
-                                <input type="checkbox" checked="checked" id="bw" />
+                                <input type="checkbox" id="bw" />
                             </div>
                             <div class="c-1-1">
                                 <label for="borg">end with a hint of the borg</label>
