adding new contact

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <p>
                             all quotes have been handpicked from star trek: the next generation tv show transcripts.
                             </p><p>
-made by vlad saling (<a href="https://plus.google.com/109896067320435138862/posts">g+</a> or <a href="https://github.com/vlad-saling">github</a>) in march 2012
+made by vlad saling (<a href="https://twitter.com/vladsaling">twitter</a> or <a href="https://github.com/vlad-saling">github</a>) in march 2012
                             
                           </p>
 
