--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                        <h2><span>set phasers to share</span></h2>
                        
                            <div class="twrapper">
-                          <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vlad_saling" class="twitter-share-button" data-lang="en">Tweet</a>
+                          <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" class="twitter-share-button" data-lang="en">Tweet</a>
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
                        </div>
