chaning author url from  twitter to git

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Star Trek Ipsum</title>
         <meta name="description" content="star trek lorem ipsum - star trek technobable inspired placeholder text">
-        <meta name="author" content="vlad saling, http://twitter.com/#!/vlad_saling">
+        <meta name="author" content="vlad saling, https://github.com/vlad-saling">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="icon" type="image/gif" href="treklogo.gif"/>
