referencing jquery from google cdn

--- a/_dev/index.html
+++ b/_dev/index.html
@@ -14,13 +14,6 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="icon" type="image/gif" href="img/treklogo.gif"/>
         <meta name="google-site-verification" content="jUFLYo2gPlXSirA0b5_9eXYc6sh3Ku__zHi84zauaeU" />
-
-        <!-- build:js:prod js/app.js -->
-        <script src="js/libs/jquery-1.7.1.min.js"></script>
-        <script src="js/the-script.js"></script>
-        <!-- /build -->
-
-     
     </head>
     <body>
 
@@ -162,6 +155,11 @@ made by vlad saling (<a href="https://twitter.com/vladsaling">twitter</a> or <a 
             </footer>
         </div>
         <!--! end of #container -->
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <!-- build:js:prod js/app.js -->
+        <script src="js/the-script.js"></script>
+        <!-- /build -->
 
 
 
