--- a/_dev/index.html
+++ b/_dev/index.html
@@ -121,6 +121,18 @@
                         
                        <h2><span>set phasers to share</span></h2>
 
+                       <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" rel="nofollow" target="_blank">Share on Twitter</a><br />
+
+                                             <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">Share on Facebook</a><br />
+
+
+                                             <a href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank">Share on Google+</a><br />
+
+
+                                              <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank">Share on LinkedIn</a>
+
+
+
                         <h2><span>about</span></h2>
                         <p>
                             all quotes have been handpicked from star trek: the next generation tv show transcripts.
