mobile ux fixing

--- a/_dev/index.html
+++ b/_dev/index.html
@@ -40,12 +40,12 @@
 
                             <div class="c-1-1 radiobuttons">
 
-                              <div class="c-2-1">
+                              <div class="c-2-1 radiogroup">
                                 <input class="radiobutton" name="radio1" type="radio" id="radio1" checked>
                                 <label for="radio1">paragraphs</label>
                               </div>
 
-                              <div class="c-2-1">
+                              <div class="c-2-1 radiogroup">
                                 <input class="radiobutton" name="radio1" type="radio" id="radio2"> 
                                 <label for="radio2">lists</label>
                               </div>
@@ -119,15 +119,15 @@
                         
                        <h2><span>set phasers to share</span></h2>
 
-                       <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" rel="nofollow" target="_blank">Share on Twitter</a><br />
+                       <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" rel="nofollow" target="_blank">share on twitter</a><br />
 
-                                             <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">Share on Facebook</a><br />
-
-
-                                             <a href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank">Share on Google+</a><br />
+                                             <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">share on facebook</a><br />
 
 
-                                              <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank">Share on LinkedIn</a>
+                                             <a href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank">share on google+</a><br />
+
+
+                                              <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank">share on linkedIn</a>
 
 
 
