--- a/_dev/index.html
+++ b/_dev/index.html
@@ -119,15 +119,15 @@
                         
                        <h2><span>set phasers to share</span></h2>
 
-                       <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" rel="nofollow" target="_blank">share on twitter</a><br />
+                       <a class="sharelink" href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" rel="nofollow" target="_blank">share on twitter</a><br />
 
-                                             <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">share on facebook</a><br />
-
-
-                                             <a href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank">share on google+</a><br />
+                                             <a class="sharelink" target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">share on facebook</a><br />
 
 
-                                              <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank">share on linkedIn</a>
+                                             <a class="sharelink" href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank">share on google+</a><br />
+
+
+                                              <a class="sharelink" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank">share on linkedIn</a>
 
 
 
