--- a/_dev/index.html
+++ b/_dev/index.html
@@ -12,7 +12,7 @@
         <meta name="author" content="vlad saling, https://github.com/vlad-saling">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="icon" type="image/gif" href="img/treklogo.gif"/>
+        <link rel="icon" type="image/gif" href="img/treklogo.png"/>
         <meta name="google-site-verification" content="jUFLYo2gPlXSirA0b5_9eXYc6sh3Ku__zHi84zauaeU" />
     </head>
     <body>
