--- a/_dev/index.html
+++ b/_dev/index.html
@@ -129,7 +129,7 @@
                         <p>
                             all quotes have been handpicked from star trek: the next generation tv show transcripts.
                             </p><p>
-made by vlad saling (<a href="https://twitter.com/vladsaling">twitter</a> or <a href="https://github.com/vlad-saling">github</a>) in march 2012
+made by <a class="sharelink" href="https://twitter.com/vladsaling">vlad saling</a> in march 2012
                             
                           </p>
 
