--- a/_prod/index.html
+++ b/_prod/index.html
@@ -135,7 +135,7 @@ made by <a class="sharelink" href="https://twitter.com/vladsaling">vlad saling</
 
                           <p>
 
-                            if you are interested for whatever reason, you can find source code of this project in my <a href="https://github.com/vlad-saling/star-trek-ipsum">github repository</a>.
+                            missing you favourite line? file an issue or contribute here <a class="sharelink" href="https://github.com/vlad-saling/star-trek-ipsum">github repository</a>
 
                           </p>
 
