--- a/_dev/index.html
+++ b/_dev/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <header>
                 <div class="cc">
-                    <div class="c-1-1">
+                    <div class="c-1-1 text-center">
                         <h1><span>star trek ipsum</span></h1>
                         <h2><span>star trek inspired placeholder text</span></h2>
                     </div>
@@ -113,7 +113,7 @@
             </div>
             <footer>
                 <div class="cc">
-                    <div class="c-1-1">
+                    <div class="c-1-1 text-center">
                         
                        <h2><span>set phasers to share</span></h2>
                         
